[package]
name = "round-windows"
version = "0.0.9"

[lib]
name = "round_windows_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tauri = { version = "2.0.0-beta.12", features = [
	"tray-icon",
	"system-tray",
	"window-center",
	"window-close",
	"window-create",
	"window-hide",
	"window-maximize",
	"window-minimize",
	"window-set-always-on-top",
	"window-set-cursor-grab",
	"window-set-cursor-visible",
	"window-set-decorations",
	"window-set-focus",
	"window-set-fullscreen",
	"window-set-ignore-cursor-events",
	"window-set-position",
	"window-set-resizable",
	"window-set-size",
	"window-set-skip-taskbar",
	"window-set-title",
	"window-show",
	"window-unmaximize",
] }
tauri-plugin-store = { git = "HTTPS://GitHub.Com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "2.0.0-beta.2"
